--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,7 @@
             }
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "beta",
     "prefer-stable": true,
     "repositories": [
         {
